# angular-deploy

./: Cargo.toml
src/: angular.rs  directory.rs  helper.rs  main.rs
