[package]
name = "angular-deploy"
version = "0.1.0"
edition = "2021"
authors = ["Aridya Maharianto"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.19", features = ["derive"] }
fs_extra = "1.2.0"
log = "0.4.17"
env_logger = "0.9.1"
itertools = "0.10.5"